Exercise 3.01: Pingpong GKE/manifests/log-output-ping-pong/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
  namespace: pingpong-logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
      - name: logoutput-reader
        image: astranero/reader:2.07.03
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          cpu: "150m"
          memory: "200Mi"
        volumeMounts:
          - name:  config
            mountPath:  "/config"
        
      - name: pingpong
        image: astranero/pingpong:2.07.03
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          cpu: "150m"
          memory: "200Mi"
