Exercise 3.01: Pingpong GKE/manifests/log-output-ping-pong/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: logoutput-svc
  namespace: pingpong-logoutput
spec:
  selector:
    app:  logoutput
  type:  LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort:  8080
---
kind: Service
apiVersion: v1
metadata:
  name: pong-svc
  namespace: pingpong-logoutput
spec:
  selector:
    app:  logoutput
  type:  LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort:  8081
